--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
+    <link href="/assets/dashboard.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/bootstrap/bootstrap-grid.min.css">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
